force-app/main/default/objects/Payroll_Dates__c/Payroll_Dates__c.object-meta.xml
<CustomObject>
    <label>Payroll Dates</label>
    <nameField>
        <displayFormat>P{000000000}</displayFormat>
        <label>Payroll Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>