force-app/main/default/objects/Payroll_Dates__c/fields/Accounting_Process__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Process</label>
    <referenceTo>Accounting_Process__c</referenceTo>
    <relationshipLabel>Payroll Dates</relationshipLabel>
    <relationshipName>Payroll_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>