force-app/main/default/objects/Payroll_Dates__c/fields/Payroll_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Not Needed</label>
    <type>Checkbox</type>
</CustomField>